<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Push</string>
    <string name="login_txt">Already registered? Login below :  </string>
    <string name="action_settings">Settings</string>
    <string name="password">***********</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="phone_img_desc">image for login id(i.e. phone number)</string>
    <string name="password_img_desc">image for password of the registered account</string>
    <string name="title_activity_profile">Contact Push Profile</string>
    <string name="welcome_txt">Welcome Contact Push User</string>
    <string name="user_name">User</string>
    <string name="emp_id">Employee ID : </string>
    <string name="phone_number">Contact : </string>
    <string name="send_contact">Send Contacts</string>
    <string name="receive_contact">Receive Contacts</string>
    <string name="title_activity_contact_list">Contact Selector</string>
    <string name="search_contact">Search Contacts...</string>
    <string name="contact_name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">Signup</string>
    <string name="name_placeholder">Enter Name</string>
    <string name="phone_placeholder">10 digit phone number</string>
    <string name="email_placeholder">Eg. chandan.rana@tcs.com</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_password_placeholder">Confirm password</string>
    <string name="signup_txt">User Sign Up</string>
    <string name="title_activity_choose_mode">Contact Push Send Mode</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="contact_push">ContactPush Account</string>
    <string name="share">Share</string>

</resources>
