<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.androidzippers.contactpush.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_txt"
            android:id="@+id/login_txt"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/loginId"
            android:layout_below="@+id/login_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="73dp"
            android:hint="@string/phone_placeholder" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/loginId"
            android:layout_alignLeft="@+id/loginId"
            android:layout_alignStart="@+id/loginId"
            android:hint="@string/password" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_img"
            android:contentDescription="@string/phone_img_desc"
            android:background="@android:drawable/sym_action_call"
            android:layout_above="@+id/password"
            android:layout_toLeftOf="@+id/password"
            android:layout_toStartOf="@+id/password"
            android:layout_alignTop="@+id/loginId" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_img"
            android:contentDescription="@string/password_img_desc"
            android:background="@android:drawable/ic_partial_secure"
            android:layout_alignBottom="@+id/password"
            android:layout_alignLeft="@+id/phone_img"
            android:layout_alignStart="@+id/phone_img"
            android:layout_alignTop="@+id/password"
            android:layout_alignRight="@+id/phone_img"
            android:layout_alignEnd="@+id/phone_img" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:id="@+id/login_btn"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/password"
            android:layout_alignEnd="@+id/password"
            android:onClick="onClickLogin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn"
            android:id="@+id/signup_btn"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:onClick="onClickSignUp" />

    </RelativeLayout>

</RelativeLayout>
