<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.androidzippers.contactpush.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_txt"
        android:id="@+id/welcomeText"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:id="@+id/profilePic"
        android:layout_gravity="left|top"
        android:background="@drawable/profile_pic"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="253dp"
        android:layout_height="47dp"
        android:text="@string/phone_number"
        android:id="@+id/phoneNumber"
        android:layout_gravity="top|center|right"
        android:layout_alignBottom="@+id/profilePic"
        android:layout_toEndOf="@+id/profilePic"
        android:layout_toRightOf="@id/profilePic"
        android:layout_alignLeft="@+id/empId"
        android:layout_alignStart="@+id/empId" />

    <TextView
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:text="@string/emp_id"
        android:id="@+id/empId"
        android:layout_gravity="center_vertical|right"
        android:layout_alignTop="@+id/profilePic"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:layout_toEndOf="@+id/receiveContact"
        android:layout_toRightOf="@+id/receiveContact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_contact"
        android:id="@+id/sendContact"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="top|center"
        android:onClick="onClickSendContact"
        android:layout_alignTop="@+id/receiveContact"
        android:layout_alignRight="@+id/phoneNumber"
        android:layout_alignEnd="@+id/phoneNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_contact"
        android:id="@+id/receiveContact"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="top|center"
        android:onClick="onClickReceiveContact"
        android:layout_below="@+id/phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp" />
</RelativeLayout>
